# yakamoz.io

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.yaml  base64.h  build.sh  cbase64.h  debug.py  environment.yml  genPreview.sh  indices.py  main.py  neutral.py  preview.py  requirements.txt  run  style.css  torchScriptGen.py  yakamoz.py  zfpBuild.sh  zfpHelper.c  zfpHelper.cxx
static/: OrbitControls.js  fonts.md  index.html  nfo.html  style.css  yakamoz.html  zfpHelper.js  zfpHelper.wasm
static/brotli-npm/base64-js/: package.json
static/brotli-npm/brotli/: package.json
static/zfp/: zfp.js  zfp.wasm
zfpHelper/: CMakeLists.txt  build.sh  zfpHelper.cxx
